data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3602.wast
;; 1. **Test Incorrect Function Index**:    - **Description**: Invoke a function using a `call x` instruction with an invalid function index that exceeds the number of functions defined in the module.    - **Constraint**: This tests if the implementation correctly checks the bounds of `funcidx`.    - **Relation to CFG**: If the CFG incorrectly handles index bounds, it may lead to incorrect branching and unpredictable behavior.

(assert_invalid
  (module
    (func $type-invalid-index
      (call 10)
    )
    (func (param i32))
    (func (param i32))
  )
  "unknown function"
)